--- a/Modding/android/app/build.gradle
+++ b/Modding/android/app/build.gradle
@@ -32,7 +32,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.haruma.sen.environment"
-    compileSdk = 34
+    compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -52,7 +52,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     signingConfigs {
