--- a/Modding/.gitignore
+++ b/Modding/.gitignore
@@ -16,6 +16,7 @@ migrate_working_dir/
 *.ipr
 *.iws
 .idea/
+.cxx/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -43,3 +44,6 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 /android/app/main/jniLibs/arm64-v8a/libKernel.so
+
+# l10n generated
+/lib/i18n/
