--- a/Website/pubspec.yaml
+++ b/Website/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     url_launcher_web: ^2.3.3
     firebase_core: ^3.8.1
     cloud_firestore: ^5.5.1
+    web: ^1.1.0
 
 dev_dependencies:
     flutter_test:
