--- a/Website/pubspec.yaml
+++ b/Website/pubspec.yaml
@@ -18,11 +18,13 @@ dependencies:
     firebase_core: ^3.8.1
     cloud_firestore: ^5.5.1
     web: ^1.1.0
+    flutter_launcher_icons: ^0.14.3
+    flutter_native_splash: ^2.4.5
 
 dev_dependencies:
     flutter_test:
         sdk: flutter
-    flutter_lints: ^4.0.0
+    flutter_lints: ^5.0.0
 flutter:
     uses-material-design: true
     generate: true
