--- a/Modding/pubspec.yaml
+++ b/Modding/pubspec.yaml
@@ -7,43 +7,25 @@ environment:
 dependencies:
     flutter:
         sdk: flutter
-    cupertino_icons: ^1.0.6
-    async: ^2.11.0
-    intl: any
     window_manager: ^0.4.3
     desktop_drop: ^0.5.0
-    image: ^4.2.0
     dynamic_color: ^1.7.0
-    flutter_localizations:
-        sdk: flutter
     local_notifier: ^0.1.6
     flutter_launcher_icons: ^0.14.1
     file_selector: ^1.0.3
     url_launcher: ^6.3.1
     path_provider: ^2.1.5
     nil: ^1.1.1
-    flutter_hooks: ^0.20.5
     matrix4_transform: ^4.0.1
-    interactive_box: ^0.4.0
     pie_menu: ^3.2.7
-    flutter_box_transform: ^0.4.6
     uuid: ^4.5.1
     stroke_text: ^1.0.0
     custom_mouse_cursor: ^1.1.2
-    flex_color_picker: ^3.6.0
-    just_audio: ^0.9.42
-    audioplayers: ^6.1.0
-    number_text_input_formatter: ^1.0.0+8
-    drop_down_search_field: ^1.1.1
-    dio: ^5.7.0
-    archive: ^4.0.2
     windows_taskbar: ^1.1.2
     loading_animation_widget: ^1.3.0
     equatable: ^2.0.7
     flutter_bloc: ^9.0.0
     bloc: ^9.0.0
-    meta: ^1.15.0
-    loading_indicator: ^3.1.1
     screenshot: ^3.0.0
     flutter_fancy_tree_view: ^1.6.0
     shared_preferences: ^2.5.2
@@ -52,6 +34,17 @@ dependencies:
     flutter_local_notifications: ^18.0.1
     path: ^1.9.1
     flutter_native_splash: ^2.4.5
+    flex_color_picker: ^3.7.0
+    audioplayers: ^6.2.0
+    drop_down_search_field: ^1.1.2+2
+    dio: ^5.8.0+1
+    archive: ^4.0.3
+    meta: ^1.16.0
+    async: ^2.12.0
+    image: ^4.5.3
+    intl: ^0.19.0
+    flutter_localizations:
+        sdk: flutter
 dev_dependencies:
     flutter_test:
         sdk: flutter
