--- a/Modding/android/app/build.gradle
+++ b/Modding/android/app/build.gradle
@@ -87,5 +87,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.activity:activity:1.6.0-alpha05"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
