--- a/Modding/windows/.gitignore
+++ b/Modding/windows/.gitignore
@@ -15,3 +15,8 @@ x86/
 *.[Cc]ache
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
+cmake-build-debug/
+cmake-build-release/
+build/
+Debug/
+Release/
