--- a/Modding/macos/Runner/Configs/AppInfo.xcconfig
+++ b/Modding/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = modding
+PRODUCT_NAME = sen
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.haruma.sen.environment
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.haruma.sen.modding. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.haruma.sen.environment. All rights reserved.
