--- a/Website/pubspec.yaml
+++ b/Website/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     go_router: ^14.8.1
     flutter_web_plugins:
         sdk: flutter
+    url_launcher: ^6.3.1
 
 dev_dependencies:
     flutter_test:
