--- a/Kernel/subprojects/fmt/CMakeLists.txt
+++ b/Kernel/subprojects/fmt/CMakeLists.txt
@@ -50,4 +50,6 @@ else ()
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 endif ()
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
