--- a/Modding/android/app/src/main/AndroidManifest.xml
+++ b/Modding/android/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
                 <data android:scheme="content" />
                 <data android:scheme="file" />
                 <data android:mimeType="image/*" />
+                <data android:mimeType="application/pdf" />
+                <data android:mimeType="video/*" />
+                <data android:mimeType="audio/*" />
                 <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
